<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_OperationCounter" Id="{8cc793b9-a930-4453-96af-f928e3127afd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	totalRunHours : LREAL := 0;
	totalSawBladeHoursSinceChanged : REAL := 0;
	totalHalfInchHoursSinceChanged : REAL := 0;
	totalQuarterInchHoursSinceChanged : REAL := 0;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>