<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_OperatingCounter" Id="{343a864b-43d4-4be9-b0a5-e74d13e6b874}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_OperatingCounter
VAR_INPUT
	stateString : STRING;
	currentTool : INT;
	SpindleIsOn : BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	// Timer to count operating time
    runTimer : TON; // Timer On-Delay
    elapsedTime : TIME := T#0S; // Time elapsed since last increment

    // Time interval for incrementing operating hours (e.g., every second)
    timeInterval : TIME := T#1S;

    totalRunHoursRounded : INT;
	totalSawbladeHoursRounded : INT;
	totalHalfInchHoursRounded : INT;
	totalQuarterInchHoursRounded : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[totalRunHoursRounded := REAL_TO_INT(GVL_OperationCounter.totalRunHours);
totalSawbladeHoursRounded := REAL_TO_INT(GVL_OperationCounter.totalSawBladeHoursSinceChanged);
totalHalfInchHoursRounded := REAL_TO_INT(GVL_OperationCounter.totalHalfInchHoursSinceChanged);
totalQuarterInchHoursRounded := REAL_TO_INT(GVL_OperationCounter.totalQuarterInchHoursSinceChanged);

IF stateString = 'RUN' OR stateString = 'TOOLCHANGERUN' OR stateString = 'TOOLCHANGEINIT' THEN
	// Timer setup
	runTimer(IN := TRUE, PT := timeInterval);
	elapsedTime := runTimer.ET;
	
	// Check if the timer has elapsed
	IF runTimer.Q THEN
		// Increment operating hours (timeInterval is in seconds, convert to hours)
		GVL_OperationCounter.totalRunHours := GVL_OperationCounter.totalRunHours + TIME_TO_REAL(elapsedTime) / 3600000.0;
		IF SpindleIsOn THEN
			IF currentTool = 0 THEN
				GVL_OperationCounter.totalSawBladeHoursSinceChanged := GVL_OperationCounter.totalSawBladeHoursSinceChanged + TIME_TO_REAL(elapsedTime) / 3600000.0;
			ELSIF currenttool = 2 THEN
				GVL_OperationCounter.totalQuarterInchHoursSinceChanged := GVL_OperationCounter.totalQuarterInchHoursSinceChanged + TIME_TO_REAL(elapsedTime) / 3600000.0;
			ELSIF currenttool = 4 THEN
				GVL_OperationCounter.totalHalfInchHoursSinceChanged := GVL_OperationCounter.totalHalfInchHoursSinceChanged + TIME_TO_REAL(elapsedTime) / 3600000.0;
			END_IF
		END_IF
		// Reset timer
		runTimer(IN := FALSE);
		runTimer(IN := TRUE);
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_OperatingCounter">
      <LineId Id="48" Count="0" />
      <LineId Id="68" Count="2" />
      <LineId Id="49" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="37" Count="7" />
      <LineId Id="74" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="79" Count="1" />
      <LineId Id="78" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="45" Count="2" />
      <LineId Id="35" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>